feat: add new html-elements (Mon, May 16, 2022 00:50 AM)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,45 @@
 </head>
 
 <body>
-
+    <header>
+        <h1 class="head"> My CSS Mem Slider </h1>
+    </header>
+    <main>
+        <div class="background_main">
+            <div class="screen">
+                <img src="./foto/mr-bean-rowan-atkinson-happiness-hd-wallpaper-preview.jpg" alt="Mem_foto" class="screen_picture">
+                <div class="text_main">
+                    <p class="phrase"> I'm best of the best! </p>
+                </div>
+                <div class="menu">
+                    <div>
+                        <button class="button_ef"></button>
+                    </div>
+                    <div>
+                        <button class="button_ef"></button>
+                    </div>
+                    <div>
+                        <button class="button_ef"></button>
+                    </div>
+                    <div>
+                        <button class="button_ef"></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="contacts">
+            <div class="discord">
+                <div class="picture_footer">
+                    <img src="./icon/1636180728_64-papik-pro-p-logotip-diskord-foto-67.png" alt="icon_discord" class="picture">
+                </div>
+                <div class="text_footer">
+                    <p class="text"> Discord: PitsuhaVladislaw </p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
